import "Content_v3.proto";

package Diadoc.Api.Proto.Dss;

option java_outer_classname = "DssSignProtos";

message DssSignRequest
{
	repeated DssSignFile Files = 1;
}

message DssSignFile
{
	required Content_v3 Content = 1;
	optional string FileName = 2;
}


enum DssConfirmType {
	ConfirmTypeUnknown = -1;
	None = 0;
	Sms = 1;
	MyDss = 2;
	Applet = 3;
	MobileSdk = 4;
}

enum DssOperator {
	OperatorUnknown = 0;
	Megafon = 1;
	Kontur = 2;
}

message DssSignResult {
	optional DssOperationStatus OperationStatus = 1 [default = Unknown];
	repeated DssFileSigningResult FileSigningResults = 2;
	optional DssConfirmType ConfirmType = 3 [default = ConfirmTypeUnknown];
	optional DssOperator Operator = 4 [default = OperatorUnknown];
	optional string PhoneLastNumbers = 5;
}

message DssFileSigningResult
{
	optional DssFileSigningStatus FileSigningStatus = 1 [default = UnknownSigningStatus];
	optional bytes Signature = 2;
}

enum DssFileSigningStatus
{
	UnknownSigningStatus = 0;
	SigningCompleted = 1;
	SigningError = 2;
}

enum DssOperationStatus
{
	Unknown = 0;
	InProgress = 1;
	Completed = 2;
	CanceledByUser = 3;
	Timeout = 4;
	Crashed = 5;
	UserHasUnconfirmedOperation = 6;
	OperationRetryRequired = 7;
}
